--- a/Website/static/css/style.css
+++ b/Website/static/css/style.css
@@ -11,4 +11,25 @@ body {
     text-align: center;
     
   }
+
+  .jumbotron h1 {
+    position: relative;
+    display: block;
+    font-weight: bold;
+    font-size: 60px;
+    color: white;
+    top:-150px;
+  }
+  
+  .jumbotron p {
+    position: relative;
+    display: block;
+    font-size: 20px;
+    color: white;
+    top:-140px;
+  }
+
+  .jumbotron {
+    top:-100px;
+  }
   
