--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,8 @@
                             Dashboards
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="right:auto; left: auto;">
-                           <a class="dropdown-item" href="https://github.com/yajingran/group_2_final_project">Correlation</a>
+                            <a class="dropdown-item">Sale Price vs Neighborhood vs Building Type</a>
+ 
                            <a class="dropdown-item" href="Hpp/dashboard2.html">Distribution</a>
                         </div>
                     </li>
