--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@ body {
   .jumbotron {
       padding-top: 200px;
       padding-bottom: 300px;
-    background-image: url("../images/real_estate.jpg");
+    background-image: url("../images/Ames1.jpg");
     background-size: 100% 100%;
     text-align: center;
     
