--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,11 @@
                             Dashboards
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="right:auto; left: auto;">
-                            <a class="dropdown-item">Sale Price vs Neighborhood vs Building Type</a>
+                            <a class="dropdown-item">Sale Price vs Neighborhood vs Building Type
+                             </a>
+
  
-                           <a class="dropdown-item" href="Hpp/dashboard2.html">Distribution</a>
+                           <a class="dropdown-item" href="Hpp/dashboard2.html">Features Correlation</a>
                         </div>
                     </li>
                     <li class="nav-item active">
@@ -51,7 +53,7 @@
     </div>
     <!--Jumbotron-->
     <div class="jumbotron jumbotron-fluid">
-        <h1 class="display-4"><b>Canada's Home of Property</b></h1>
+        <h1 class="display-4"><b>Ames's Home of Property</b></h1>
         <p class="lead"  style="text-align:center"><b>Predict sales prices and practice feature engineering, RFs, and gradient boosting</b></p>
  
         <div class="row">
