--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
                             Dashboards
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="right:auto; left: auto;">
-                            <a class="dropdown-item">Sale Price vs Neighborhood vs Building Type
+                            <a class="dropdown-item" href="https://yajingran.github.io/group_2_final_project/dashboards/dashboard1.html">Sale Price vs Neighborhood vs Building Type
                              </a>
 
  
