--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                              </a>
 
  
-                           <a class="dropdown-item" href="Hpp/dashboard2.html">Features Correlation</a>
+                           <a class="dropdown-item" href="https://yajingran.github.io/group_2_final_project/dashboards/dashboard2.html">Year vs Sale vs Overall Condition</a>
                         </div>
                     </li>
                     <li class="nav-item active">
