--- a/templates/index.html
+++ b/templates/index.html
@@ -27,20 +27,15 @@
                             <span class="sr-only"(current)></span>
                         </a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">
                             Dashboards
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="right:auto; left: auto;">
-                            <a class="dropdown-item" href="https://yajingran.github.io/group_2_final_project/dashboards/dashboard1.html">Sale Price vs Neighborhood vs Building Type
-                             </a>
-
- 
-                           <a class="dropdown-item" href="https://yajingran.github.io/group_2_final_project/dashboards/dashboard2.html">Year vs Sale vs Overall Condition</a>
-                        </div>
+                        </a>                       
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link">Machine Learning</a>
+                        <a class="nav-link" href="#">
+                            Machine Learning
+                        </a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="https://github.com/yajingran/group_2_final_project">
