--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,8 +29,66 @@ body {
     top:-140px;
   }
 
-  .span {
-    position: relative;
-    top: -100px;
-  }
+ .container {
+   background-color: #fff;
+   border-radius: 5px;
+   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+   overflow: hidden;
+   width:400px;
+   max-width: 100%;
+ }
+
+ .header {
+   background-color: #f7f7f7;
+   border-bottom: 1px solid #f0f0f0;
+   padding: 20px 40px;
+ }
+
+ .header h2 {
+   margin: 0;
+   color: black;
+ }
+
+ .form {
+   padding: 30px 40px;
+ }
+
+ .form-control {
+   margin-bottom: 10px;
+   padding-bottom: 20px;
+   position: relative;
+ }
+
+.form-control label {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
+.form-control input {
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  display: block;
+  font-family: inherit;
+  font-size: 14px;
+  padding: 10px;
+  width: 100%;
+}
+
+.form button {
+  background-color: #8e44ad;
+  border: 2px solid #8e44ad;
+  border-radius: 4px;
+  color: #fff;
+  display: block;
+  font-family: inherit;
+  font-size: 16px;
+  padding: 10px;
+  width: 100%
+}
+
+
+
+
+
+
 
