--- a/templates/index.html
+++ b/templates/index.html
@@ -62,23 +62,45 @@
                 <form class="form" id="form">
                   <div class="form-control">
                     <label>Lot Type</label>
-                    <input type="text" placeholder="Enter Lot" id="lot">
+                    <input type="text" placeholder="Enter Lot" id="lott">
                   </div>
                   
                    <div class="form-control">
                     <label>Overall Quality</label>
-                    <input type="text" placeholder="Enter Quality" id="quality">
+                    <input type="number" placeholder="Enter Quality" id="quality">
                   </div>
                   
                     <div class="form-control">
                     <label>Total Area</label>
-                    <input type="text" placeholder="Enter Area" id="quality">
+                    <input type="number" placeholder="Enter Area" id="area">
                   </div>
                   
                   <div class="form-control">
-                    <label>Lot</label>
-                    <input type="text" placeholder="Enter Lot" id="lot">
+                    <label>Neighborhood</label>
+                    <input type="text" placeholder="Enter Neighborhood" id="neighborhood">
                   </div>                              
+    
+                  <div class="form-control">
+                    <label>Full Bath</label>
+                    <input type="number" placeholder="Enter Number of Full Bath" id="fullbath">
+                  </div>                              
+    
+                  <div class="form-control">
+                    <label>Year Built</label>
+                    <input type="number" placeholder="Enter Year" id="year">
+                  </div>                              
+
+                  <div class="form-control">
+                    <label>Foundation</label>
+                    <input type="text" placeholder="Enter Foundation" id="foundation">
+                  </div>                 
+                  
+                  <div class="form-control">
+                    <label>Garage Cars</label>
+                    <input type="number" placeholder="Enter Number of Garage Cars" id="garagecars">
+                  </div>                              
+    
+    
     
               <button>Submit</button>
               
