--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,12 +4,12 @@ body {
   }
  
   .jumbotron {
-      padding-top: 200px;
-      padding-bottom: 300px;
-    background-image: url("../images/Ames1.jpg");
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-image: url("../images/realty.PNG");
     background-size: 100% 100%;
+    height: 80%;
     text-align: center;
-    
   }
 
   .jumbotron h1 {
@@ -18,7 +18,7 @@ body {
     font-weight: bold;
     font-size: 60px;
     color: white;
-    top:-150px;
+    top:-70px;
   }
   
   .jumbotron p {
@@ -26,7 +26,7 @@ body {
     display: block;
     font-size: 20px;
     color: white;
-    top:-140px;
+    top:-50px;
   }
 
  .container {
