--- a/templates/index.html
+++ b/templates/index.html
@@ -61,43 +61,47 @@
                
                 <form class="form" id="form">
                   <div class="form-control">
-                    <label>Lot Type</label>
-                    <input type="text" placeholder="Enter Lot" id="lott">
+                    <label>Total Area (ft²)</label>
+                    <input type="number" placeholder="Enter Area" id="area">
                   </div>
                   
                    <div class="form-control">
                     <label>Overall Quality</label>
-                    <input type="number" placeholder="Enter Quality" id="quality">
+                    <select id="quality">
+                      <option value="Good">Good</option>
+                      <option value="Median">Median</option>
+                      <option value="Poor">Poor</option>
+                    </select>
                   </div>
                   
                     <div class="form-control">
-                    <label>Total Area</label>
-                    <input type="number" placeholder="Enter Area" id="area">
+                    <label>Ground Living Area</label>
+                    <input type="text" placeholder="Enter Area" id="grlivarea">
                   </div>
                   
                   <div class="form-control">
-                    <label>Neighborhood</label>
-                    <input type="text" placeholder="Enter Neighborhood" id="neighborhood">
+                    <label>Garage Cars</label>
+                    <input type="number" placeholder="Enter Number" id="garagecars">
+                  </div>                              
+    
+                  <div class="form-control">
+                    <label>Garage Area</label>
+                    <input type="number" placeholder="Enter Area" id="garagearea">
                   </div>                              
     
                   <div class="form-control">
                     <label>Full Bath</label>
-                    <input type="number" placeholder="Enter Number of Full Bath" id="fullbath">
-                  </div>                              
-    
+                    <input type="number" placeholder="Enter Number" id="fullbath">
+                  </div>                 
+                  
                   <div class="form-control">
                     <label>Year Built</label>
                     <input type="number" placeholder="Enter Year" id="year">
                   </div>                              
 
                   <div class="form-control">
-                    <label>Foundation</label>
-                    <input type="text" placeholder="Enter Foundation" id="foundation">
-                  </div>                 
-                  
-                  <div class="form-control">
-                    <label>Garage Cars</label>
-                    <input type="number" placeholder="Enter Number of Garage Cars" id="garagecars">
+                    <label>Year Remodeled</label>
+                    <input type="number" placeholder="Enter Year" id="year2">
                   </div>                              
     
     
