--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 body {
+    min-height: 100vh;
  
     color: #f7f7f7;
   }
@@ -6,7 +7,7 @@ body {
   .jumbotron {
     padding-top: 100px;
     padding-bottom: 100px;
-    background-image: url("../images/realty.PNG");
+    background-image: url("../images/house.jpg");
     background-size: 100% 100%;
     height: 80%;
     text-align: center;
@@ -36,6 +37,7 @@ body {
    overflow: hidden;
    width:400px;
    max-width: 100%;
+   height: 1000px;
  }
 
  .header {
@@ -50,7 +52,8 @@ body {
  }
 
  .form {
-   padding: 30px 40px;
+   padding: 70px 70px;
+   margin-bottom: 200px;
  }
 
  .form-control {
@@ -82,12 +85,16 @@ body {
   display: block;
   font-family: inherit;
   font-size: 16px;
-  padding: 10px;
+  padding: 30px;
   width: 100%
 }
 
-
-
+.paragraph {
+  position:relative;
+  left: 600px;
+  top: 200px;
+  font-size: 20px;
+}
 
 
 
