--- a/templates/index.html
+++ b/templates/index.html
@@ -51,19 +51,19 @@
         <h1 class="display-4"><b>Ames's Home of Property</b></h1>
         <p class="lead"  style="text-align:center"><b>Predict sales prices and practice feature engineering, RFs, and gradient boosting</b></p>
     </div>
-
-
+ 
+ 
 <div class=paragraph class="row" class="col-md-6">
   <p style="color:black">
     Type in the features and get the predicted price of your dream house.
   </p>
 </div>
-
+ 
 <div class=paragraph id="result" class="col-md-6">
   <p style="color:black"> Price of the house is {{ pred }} USD </p>
 </div>
-
-
+ 
+ 
         <div class="row">
         <div class="col-md-4">
  
@@ -72,9 +72,11 @@
                   <h2>Features Input</h2>
                 </div>
                
-                <div class="form-control">
+                
+                <div class=form>
+                  <div class="form-control">
                   <form action="/predict" method="POST">
-
+ 
                   <label class='select_label'>Neighborhood</label>
                   <select id="neighborhood" name='neighborhood'>
                     <option value="0">Bloomington Heights</option>
@@ -105,7 +107,7 @@
                     <option value="27">Veenker</option>
                   </select><br>
                 </div>
-
+ 
                   <div class="form-control">
                     <label>Total Area (ft²)</label><br>
                     <input type="number" placeholder="Enter Area" id="total_area" name='total_area'><br>
@@ -139,7 +141,7 @@
                     </select><br>
                   </div>                       
     
-
+ 
                   <div class=form-control>
                     <label class='select_label'>Full Bath</label><br>
                     <select id="fullbath" name='fullbath'>
@@ -155,37 +157,29 @@
                     <label>Year Built</label><br>
                     <input type="number" placeholder="Enter Year" id="yearbuilt" name='yearbuilt'><br>
                   </div>
-
+ 
                   <div class=form-control>
                     <label>Year Remodeled</label><br>
                     <input type="number" placeholder="Enter Year" id="yearremodadd" name='yearremodadd'><br>
                   </div>
-
-                  <div class=form-control>
-                    <label class='select_label'>Year Sold</label><br>
-                    <select id="fullbath" name='fullbath'>
-                      <option value="0">2006</option>
-                      <option value="1">2007</option>
-                      <option value="2">2008</option>
-                      <option value="3">2009</option>
-                      <option value="4">2010</option>
-                      </select>
-                  </div>
+ 
+ 
     
               <button id="predict btn" class="mt-20 btn action-1" style="background-color:powderblue"><b> Predict Price</b></button>
               
-              </form>
+                </form>
               </div>
+            </div>
              
-        </div>
+        
     <div class="container-fliud">
         <div class="row">
          </div>
      </div>
     
        </div>
-
-
+ 
+ 
    
     </div>
 </body>
