--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,96 +1,108 @@
 body {
-    min-height: 100vh;
- 
-    color: #f7f7f7;
-  }
- 
-  .jumbotron {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    background-image: url("../images/house.jpg");
-    background-size: 100% 100%;
-    height: 80%;
-    text-align: center;
-  }
+  min-height: 100vh;
 
-  .jumbotron h1 {
-    position: relative;
-    display: block;
-    font-weight: bold;
-    font-size: 60px;
-    color: white;
-    top:-70px;
-  }
-  
-  .jumbotron p {
-    position: relative;
-    display: block;
-    font-size: 20px;
-    color: white;
-    top:-50px;
-  }
+  background-color: lightsteelblue;
+}
 
- .container {
-   background-color: #fff;
-   border-radius: 5px;
-   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-   overflow: hidden;
-   width:400px;
-   max-width: 100%;
-   height: 1000px;
- }
+.jumbotron {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-image: url("../images/house.jpg");
+  background-size: 100% 100%;
+  height: 80%;
+  text-align: center;
+}
 
- .header {
-   background-color: #f7f7f7;
-   border-bottom: 1px solid #f0f0f0;
-   padding: 20px 40px;
- }
+.jumbotron h1 {
+  position: relative;
+  display: block;
+  font-weight: bold;
+  font-size: 60px;
+  color: white;
+  top:-70px;
+}
 
- .header h2 {
-   margin: 0;
-   color: black;
- }
+.jumbotron p {
+  position: relative;
+  display: block;
+  font-size: 20px;
+  color: white;
+  top:-50px;
+}
+
+.container {
+ background-color: whitesmoke;
+ border-radius: 5px;
+ box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+ overflow: hidden;
+ width:400px;
+ max-width: 100%;
+ height: 850px;
+}
+
+.header {
+background-color: white;
+ border-bottom: 1px solid #f0f0f0;
+ padding: 20px 40px;
+}
+
+.header h2 {
+ margin: 0;
+ color: black;
+ background-color: whitesmoke
+}
 
 
 
- .form {
-   margin-bottom: 10px;
-   padding-bottom: 10px;
-   position: relative;
- }
+.form {
+ margin-bottom: 5px;
+ padding-bottom: 10px;
+ position: relative;
+ background-color: white;
+ box-shadow: 0 0 10px;
+
+ border-radius: 5px
+}
+
+
+.form-control {
+background-color: white
+}
+
 
 .form-control label {
-  display: inline-block;
-  margin-bottom: 5px;
+display: inline-block;
+margin-bottom: 5px;
 }
 
 .form-control input {
-  border: 2px solid #f0f0f0;
-  border-radius: 4px;
-  display: block;
-  font-family: inherit;
-  font-size: 14px;
-  padding: 10px;
-  width: 100%;
+border: 2px solid #f0f0f0;
+border-radius: 4px;
+display: block;
+font-family: inherit;
+font-size: 14px;
+padding: 10px;
+width: 100%;
+background-color: white
 }
 
 .form button {
-  background-color: #8e44ad;
-  border: 2px solid #8e44ad;
-  border-radius: 4px;
-  color: #fff;
-  display: block;
-  font-family: inherit;
-  font-size: 16px;
-  padding: 30px;
-  width: 100%
+background-color: #8e44ad;
+border: 2px solid black;
+border-radius: 4px;
+color: #fff;
+display: block;
+font-family: inherit;
+font-size: 16px;
+padding: 30px;
+width: 100%
 }
 
 .paragraph {
-  position:relative;
-  left: 600px;
-  top: 200px;
-  font-size: 20px;
+position:relative;
+left: 600px;
+top: 200px;
+font-size: 20px;
 }
 
 
