--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         </head>
- 
+
 <!--Navigation bar-->
 <body class="siteScrolled" data-new-gr-c-s-check-loaded="14.983.0">
     <div class="wrapper">
@@ -51,6 +51,8 @@
         <h1 class="display-4"><b>Ames's Home of Property</b></h1>
         <p class="lead"  style="text-align:center"><b>Predict sales prices and practice feature engineering, RFs, and gradient boosting</b></p>
     </div>
+
+    <!--main-->
         <div class="row">
         <div class="col-md-3">
  
