--- a/templates/index.html
+++ b/templates/index.html
@@ -165,7 +165,10 @@
                     <input type="number" placeholder="Enter Year" id="yearremodadd" name='yearremodadd'><br>
                   </div>
  
- 
+                  <div class=form-control>
+                    <label>Year Sold</label><br>
+                    <input type="number" placeholder="Enter Year" id="yearsold" name="yearsold"><br>
+                  </div>
     
               <button id="predict btn" class="mt-20 btn action-1" style="background-color:powderblue"><b> Predict Price</b></button>
               
