--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
  
                   <div class="form-control">
                     <label>Total Area (ft²)</label><br>
-                    <input type="number" placeholder="Enter Area" id="total_area" name='total_area'><br>
+                    <input type="number" placeholder="Enter Area" id="total_area" name='total_area' required><br>
                   </div>
                   
                   <div class="form-control">
@@ -157,17 +157,17 @@
                   
                   <div class=form-control>
                     <label>Year Built</label><br>
-                    <input type="number" placeholder="Enter Year" id="yearbuilt" name='yearbuilt'><br>
+                    <input type="number" placeholder="Enter Year" id="yearbuilt" name='yearbuilt' required><br>
                   </div>
  
                   <div class=form-control>
                     <label>Year Remodeled</label><br>
-                    <input type="number" placeholder="Enter Year" id="yearremodadd" name='yearremodadd'><br>
+                    <input type="number" placeholder="Enter Year" id="yearremodadd" name='yearremodadd' required><br>
                   </div>
  
                   <div class=form-control>
                     <label>Year Sold</label><br>
-                    <input type="number" placeholder="Enter Year" id="yearsold" name="yearsold"><br>
+                    <input type="number" placeholder="Enter Year" id="yearsold" name="yearsold" required><br>
                   </div>
     
               <button id="predict btn" class="mt-20 btn action-1" style="background-color:powderblue"><b> Predict Price</b></button>
@@ -189,4 +189,3 @@
     </div>
 </body>
 </html>
-    
