--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,45 @@
-body {
-  min-height: 130vh;
- 
-  background-color: lightsteelblue;
+
+
+
+
+
+
+
+
+/* home page */
+
+
+
+
+/*NAVBAR*/
+.navbar .navbar-brand{
+  color: #074fa6;
+  font-size: 30px;
+  font-family: 'Montserrat-Bold';
 }
- 
+.navbar .navbar-nav{
+ margin-left: 160px;
+}
+.navbar .navbar-nav .nav-link{
+  color: black;
+  font-size: 18px;
+  margin-right: 10px;
+  padding: 12px;
+  transition: .3s;
+
+
+}
+.navbar .navbar-nav .nav-link:hover{
+  color: white;
+  background-color: #4CAF50;
+
+}
+.active {
+ color: #fff!important;
+ background-color: #4CAF50;
+}
+
+
 .jumbotron {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -12,7 +48,7 @@ body {
   height: 80%;
   text-align: center;
 }
- 
+
 .jumbotron h1 {
   position: relative;
   display: block;
@@ -21,7 +57,7 @@ body {
   color: white;
   top:-70px;
 }
- 
+
 .jumbotron p {
   position: relative;
   display: block;
@@ -29,79 +65,79 @@ body {
   color: white;
   top:-50px;
 }
- 
+
 .container {
- background-color: whitesmoke;
- border-radius: 5px;
- box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
- overflow: hidden;
- width:400px;
- max-width: 100%;
- height: 950px;
+  background-color: whitesmoke;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  width:400px;
+  max-width: 100%;
+  height: 950px;
 }
- 
+
 .header {
-background-color: white;
- border-bottom: 1px solid #f0f0f0;
- padding: 20px 40px;
+  background-color: white;
+  border-bottom: 1px solid #f0f0f0;
+  padding: 20px 40px;
 }
- 
+
 .header h2 {
- margin: 0;
- color: black;
- background-color: whitesmoke
+  margin: 0;
+  color: black;
+  background-color: whitesmoke
 }
- 
- 
- 
+
+
+
 .form {
- margin-bottom: 5px;
- padding-bottom: 10px;
- position: relative;
- background-color: white;
- box-shadow: 0 0 10px;
- 
- border-radius: 5px
+  margin-bottom: 5px;
+  padding-bottom: 10px;
+  position: relative;
+  background-color: white;
+  box-shadow: 0 0 10px;
+
+  border-radius: 5px
 }
- 
- 
+
+
 .form-control {
-background-color: white
+  background-color: white
 }
- 
- 
+
+
 .form-control label {
-display: inline-block;
-margin-bottom: 5px;
+  display: inline-block;
+  margin-bottom: 5px;
 }
- 
+
 .form-control input {
-border: 2px solid #f0f0f0;
-border-radius: 4px;
-display: block;
-font-family: inherit;
-font-size: 14px;
-padding: 10px;
-width: 100%;
-background-color: white
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  display: block;
+  font-family: inherit;
+  font-size: 14px;
+  padding: 10px;
+  width: 100%;
+  background-color: white
 }
- 
+
 .form button {
-background-color: #8e44ad;
-border-radius: 4px;
-color: #fff;
-display: block;
-font-family: inherit;
-font-size: 16px;
-padding: 30px;
-width: 100%
+  background-color: #8e44ad;
+  border-radius: 4px;
+  color: #fff;
+  display: block;
+  font-family: inherit;
+  font-size: 16px;
+  padding: 30px;
+  width: 100%
 }
- 
+
 .paragraph {
-position:relative;
-left: 600px;
-top: 200px;
-font-size: 20px;
+  position:relative;
+  left: 600px;
+  top: 200px;
+  font-size: 20px;
 }
 
 
@@ -116,8 +152,25 @@ button {
 
 button:hover {
   background-color: rgba(0,136,169,0.8);
- 
+
 }
+
+
+.background-para{
+  background: #4CAF50;
+  color: #fff;
+  padding: 2rem 2rem;
+  border-radius: 50px;
+  font-size: 1.15rem;
+}
+
+#predict-btn{
+  transition: 0.3s;
+}
+#predict-btn:hover{
+  background: #4CAF50 !important;
+}
+
 
 
 
