--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,12 @@
 
-
-
-
-
-
-
-
 /* home page */
+body {
+  background-color: #c3cfe3;
+}
 
-
+.wrapper {
+  background-color: white
+}
 
 
 /*NAVBAR*/
@@ -31,12 +29,12 @@
 }
 .navbar .navbar-nav .nav-link:hover{
   color: white;
-  background-color: #4CAF50;
+  background-color: #82a2cc;
 
 }
 .active {
  color: #fff!important;
- background-color: #4CAF50;
+ background-color: #82a2cc;
 }
 
 
@@ -67,9 +65,9 @@
 }
 
 .container {
-  background-color: whitesmoke;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  background-color: #bdcce6;
+  border-radius: 20px;
+  box-shadow: 0 2px 30px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   width:400px;
   max-width: 100%;
@@ -77,15 +75,17 @@
 }
 
 .header {
-  background-color: white;
   border-bottom: 1px solid #f0f0f0;
   padding: 20px 40px;
+  background-color: #bdcce6
+
 }
 
 .header h2 {
   margin: 0;
   color: black;
-  background-color: whitesmoke
+  background-color:   #bdcce6;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
@@ -94,15 +94,15 @@
   margin-bottom: 5px;
   padding-bottom: 10px;
   position: relative;
-  background-color: white;
-  box-shadow: 0 0 10px;
+  background-color: #c3cfe3;
+  box-shadow: 0 0 5px;
 
-  border-radius: 5px
+  border-radius: 15px
 }
 
 
 .form-control {
-  background-color: white
+  background-color: #c3cfe3
 }
 
 
@@ -123,7 +123,6 @@
 }
 
 .form button {
-  background-color: #8e44ad;
   border-radius: 4px;
   color: #fff;
   display: block;
@@ -143,7 +142,7 @@
 
 button {
   padding: 9px 25px;
-  background-color: rgba(0,136,169,1);
+  background-color: #82a2cc;
   border: none;
   border-radius: 50px;
   cursor: pointer;
@@ -157,7 +156,7 @@ button:hover {
 
 
 .background-para{
-  background: #4CAF50;
+  background: #074fa6;
   color: #fff;
   padding: 2rem 2rem;
   border-radius: 50px;
@@ -168,7 +167,7 @@ button:hover {
   transition: 0.3s;
 }
 #predict-btn:hover{
-  background: #4CAF50 !important;
+  background: #82a2cc !important;
 }
 
 
