--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,7 @@
                     <input type="number" placeholder="Enter Year" id="yearsold" name="yearsold" required min="0"><br>
                   </div>
     
-              <button id="predict-btn" class="mt-20 btn action-1" style="background-color:powderblue"><b> Predict Price</b></button>
+              <button id="predict-btn" class="mt-20 btn action-1" style="background-color:#074fa6"><b> Predict Price</b></button>
               
                 </form>
               </div>
@@ -179,7 +179,7 @@
      </div>
 
      <div id="result">
-         <p style="color:black" class="background-para"> {{ pred }} </p>
+         <p style="color:white" class="background-para"> The price of your dream house is ${{ pred }} </p>
      </div>
 
  </div>
