--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -47,12 +47,12 @@ body
 }
 .navbar .navbar-nav .nav-link:hover{
     color: white;
-    background-color: skyblue;
+    background-color: #c3cfe3
 
 }
 .active {
    color: #fff!important;
-   background-color: skyblue;
+   background-color: #c3cfe3;
 }
 
 /*SLIDER*/
