--- a/static/css/style3.css
+++ b/static/css/style3.css
@@ -78,3 +78,12 @@ body {
   .wrapper {
     background-color: white
   }
+
+
+
+  .tableauPlaceholder{
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%
+  }
