--- a/templates/index.html
+++ b/templates/index.html
@@ -11,37 +11,24 @@
   
         </head>
  
-<!--Navigation bar-->
-<body class="siteScrolled" data-new-gr-c-s-check-loaded="14.983.0">
-    <div class="wrapper">
-        <nav class="navbar navbar-expand-lg navbar-light" id="navMain">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent" drop-menu-right>
-                <a class="navbar-brand" href="#">House Prices Prediction</a>
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link text-blue" href="http://127.0.0.1:5000">
-                            Home 
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://yajingran.github.io/group_2_final_project/dashboards/dashboard1.html">
-                            Dashboards
-                        </a>                       
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://yajingran.github.io/group_2_final_project/dashboards/ml.html">
-                            Machine Learning
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/yajingran/group_2_final_project">
-                        Github Repository</a>
-                    </li>
-                </ul>
+  <!-- ======= Header ======= -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="http://127.0.0.1:5000">House Prices Prediction</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" href="http://127.0.0.1:5000">Home</a>
+        <a class="nav-link" href="https://yajingran.github.io/group_2_final_project/dashboards/dashboard1.html">Dashboards</a>
+        <a class="nav-link" href="https://yajingran.github.io/group_2_final_project/dashboards/ml.html">Machine Learning </a>
+        <a class="nav-link" href="https://github.com/yajingran/group_2_final_project">Github Repository</a>
 
-            </div>
-        </nav>
+        
+      </div>
     </div>
+  </nav>
+
     <!--Jumbotron-->
     <div class="jumbotron jumbotron-fluid">
         <h1 class="display-4"><b>Ames's Home of Property</b></h1>
