--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,21 +29,21 @@ body {
 }
 .navbar .navbar-nav .nav-link:hover{
   color: white;
-  background-color: #82a2cc;
+  background-color: #074fa6;
 
 }
 .active {
  color: #fff!important;
- background-color: #82a2cc;
+ background-color: #074fa6;
 }
 
 
 .jumbotron {
-  padding-top: 100px;
+  padding-top: 120px;
   padding-bottom: 100px;
   background-image: url("../images/house.jpg");
   background-size: 100% 100%;
-  height: 80%;
+  height: 60%;
   text-align: center;
 }
 
@@ -53,7 +53,7 @@ body {
   font-weight: bold;
   font-size: 60px;
   color: white;
-  top:-70px;
+  top:0px;
 }
 
 .jumbotron p {
@@ -61,11 +61,11 @@ body {
   display: block;
   font-size: 20px;
   color: white;
-  top:-50px;
+  top:15px;
 }
 
 .container {
-  background-color: #bdcce6;
+  background-color: #adc3eb;
   border-radius: 20px;
   box-shadow: 0 2px 30px rgba(0, 0, 0, 0.3);
   overflow: hidden;
@@ -77,14 +77,14 @@ body {
 .header {
   border-bottom: 1px solid #f0f0f0;
   padding: 20px 40px;
-  background-color: #bdcce6
+  background-color: #adc3eb
 
 }
 
 .header h2 {
   margin: 0;
   color: black;
-  background-color:   #bdcce6;
+  background-color:   #adc3eb;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
