--- a/static/css/style3.css
+++ b/static/css/style3.css
@@ -39,7 +39,7 @@ body
    margin-left: 160px;
 }
 .navbar .navbar-nav .nav-link{
-    color: white;
+    color: black;
     font-size: 18px;
     margin-right: 10px;
     padding: 12px;
