--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,19 @@
+@font-face{
+  font-family: 'Montserrat-Bold';
+  src: url('fonts/Montserrat-Bold.ttf');
+}
+
+@font-face{
+  font-family: 'Montserrat-Regular';
+  src: url('fonts/Montserrat-Regular.ttf');
+}
+@font-face{
+  font-family: 'Montserrat-Light';
+  src: url('fonts/Montserrat-Light.ttf');
+}
+
+
+
 
 /* home page */
 body {
