--- a/templates/index.html
+++ b/templates/index.html
@@ -165,8 +165,8 @@
          </p>
      </div>
 
-     <div id="result">
-         <p style="color:white" class="background-para"> The price of your dream house is ${{ pred }} </p>
+     <div class="row" id="result">
+         <p class="background-para"> The price of your dream house is ${{ pred }}. </p>
      </div>
 
  </div>
