--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     <!--Jumbotron-->
     <div class="jumbotron jumbotron-fluid">
         <h1 class="display-4"><b>Ames's Home of Property</b></h1>
-        <p class="lead"  style="text-align:center"><b>Predict sales prices and practice feature engineering, RFs, and gradient boosting</b></p>
+        <p class="lead"  style="text-align:center"><b>Using multiple linear regression to build a machine learning model which we implemented onto the website <br>for predicting house sales prices based on selected features.</b></p>
     </div>
  
  
